--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "chokidar": "^3.6.0",
     "express": "^4.19.2",
+    "pixi.js": "^7.4.2",
     "sharp": "^0.33.4"
   }
 }
