--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "techninja",
   "license": "MIT",
   "dependencies": {
+    "@inquirer/prompts": "^7.8.6",
     "axios": "^1.7.2",
+    "chalk": "^5.6.2",
     "chokidar": "^3.6.0",
     "express": "^4.19.2",
     "pixi.js": "^7.4.2",
