--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "init": "node src/pi-install.js",
+    "pi-configure": "node src/pi-install.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "techninja",
