--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "photos:sync": "node scripts/google-photos-sync.js sync",
     "photos:list": "node scripts/google-photos-sync.js list",
     "pi-configure": "node src/pi-install.js",
+    "native:build": "cd native && cmake . && make",
+    "native:run": "cd native && ./clarity-frame",
+    "native:install": "sudo apt-get update && sudo apt-get install -y libsdl2-dev libsdl2-image-dev cmake build-essential",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "techninja",
