Switch to software fullscreen rendering

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pi-configure": "node src/pi-install.js",
     "native:build": "cd native && cmake . && make",
     "native:run": "cd native && ./clarity-frame",
+    "native:windowed": "cd native && ./clarity-frame --windowed",
     "native:install": "sudo apt-get update && sudo apt-get install -y libsdl2-dev libsdl2-image-dev cmake build-essential",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
