Add drm driver finder

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "native:run": "cd native && ./clarity-frame",
     "native:windowed": "cd native && ./clarity-frame --windowed",
     "native:framebuffer": "cd native && sudo ./framebuffer",
+    "native:drm": "cd native && sudo ./drm-test",
     "native:install": "sudo apt-get update && sudo apt-get install -y libsdl2-dev libsdl2-image-dev cmake build-essential",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
