--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -10,6 +10,7 @@ pkg_check_modules(SDL2_IMAGE REQUIRED SDL2_image)
 add_executable(clarity-frame main.cpp)
 add_executable(simple-test simple_test.cpp)
 add_executable(framebuffer framebuffer.cpp)
+add_executable(drm-test drm_test.cpp)
 
 target_link_libraries(clarity-frame ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 target_include_directories(clarity-frame PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
@@ -22,3 +23,7 @@ target_compile_options(simple-test PRIVATE ${SDL2_CFLAGS_OTHER})
 target_link_libraries(framebuffer ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 target_include_directories(framebuffer PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
 target_compile_options(framebuffer PRIVATE ${SDL2_CFLAGS_OTHER} ${SDL2_IMAGE_CFLAGS_OTHER})
+
+target_link_libraries(drm-test ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+target_include_directories(drm-test PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+target_compile_options(drm-test PRIVATE ${SDL2_CFLAGS_OTHER} ${SDL2_IMAGE_CFLAGS_OTHER})
